fix: spacing around tags
Resolves another lighthouse issue.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -451,6 +451,7 @@ a.nav-forum {
   position: relative;
   display: block;
   overflow: hidden;
+  margin-bottom: 1.2rem;
 }
 
 .post-card-image {
@@ -474,7 +475,7 @@ a.nav-forum {
 .post-card-tags a {
   margin-bottom: 1.3rem;
   color: var(--gray75);
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   line-height: 1.15em;
   font-weight: 500;
   letter-spacing: 0.5px;
@@ -483,7 +484,7 @@ a.nav-forum {
 }
 
 .post-card-title {
-  margin-top: 0;
+  margin-top: 1rem;
 }
 
 .post-card-title a {
